--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 ###> symfony/framework-bundle ###
-/.env.local
-/.env.local.php
-/.env.*.local
+.env
+.env.local
+.env.*
+.gitignore
 /config/secrets/prod/prod.decrypt.private.php
 /public/bundles/
 /var/
